media/lanraragi/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lanraragi
  name: lanraragi
  namespace: lanraragi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lanraragi
  template:
    metadata:
      labels:
        app: lanraragi
    spec:
      containers:
        - name: lanraragi
          image: difegue/lanraragi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: lanraragi
              protocol: TCP
          volumeMounts:
            - mountPath: /home/koyomi/lanraragi/content
              name: datadir
              subPath: content
            - mountPath: /home/koyomi/lanraragi/thumb
              name: datadir
              subPath: thumb
            - mountPath: /home/koyomi/lanraragi/database
              name: datadir
              subPath: database
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: lanraragi-longhorn-pvc
