media/lanraragi/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lanraragi
  name: lanraragi
  namespace: lanraragi
spec:
  ports:
    - name: lanraragi
      port: 27777
      targetPort: 3000
      protocol: TCP
  selector:
    app: lanraragi
  type: LoadBalancer
